# Marine_automate

./: .gitignore  .gitmodules  M300.cpp  M300_new.cpp  M300_newTest.cpp  README.md  format_cpp_files.sh  startup.service
moos-ivp-pavlab-aro/.svn/: wc.db
moos-ivp-pavlab-aro/data/: map.info  map.tif
moos-ivp-pavlab-aro/missions/alpha_census/: basic_census.opt  launch.sh  launch_vehicle.sh
moos-ivp-pavlab-aro/missions/alpha_heron/: get_heron_info.sh  launch_now.sh  launch_vehicle.sh  meta_shoreside.moos  meta_vehicle.moos
moos-ivp-pavlab-aro/missions/alpha_sailsurvey/: meta_vehicle.bhv
moos-ivp-pavlab-aro/missions/beta_opinion/: launch.sh  meta_vehicle.bhv  plug_pOpinionManager.moos
moos-ivp-pavlab-aro/missions/demustering/: launch_shoreside.sh  meta_shoreside.moos  meta_vehicle.moos  plug_uSimMarineV22.moos
moos-ivp-pavlab-aro/missions/ufld_joust_pavlab/: init_field.sh  joust.txt  meta_shoreside.moos  meta_vehicle.bhv  plugs.moos
moos-ivp-pavlab-aro/missions_rt/formations_alpha/: meta_vehicle.bhv
moos-ivp-pavlab-aro/src/: CMakeLists.txt
moos-ivp-pavlab-aro/src/app_alogceval/: LogEvalHandler.cpp  LogEvalHandler.h  main.cpp
moos-ivp-pavlab-aro/src/app_convoy_order/: OrderHandler.cpp  OrderHandler.h  main.cpp
moos-ivp-pavlab-aro/src/app_pickjoust/: JoustGenerator.cpp  JoustGenerator.h  main.cpp  (+4 more)
moos-ivp-pavlab-aro/src_rturrisi/: CMakeLists.txt
moos-ivp/.svn/: wc.db
moos-ivp/ivp/src/pMarineViewer/: CMakeLists.txt  MOOS_event.h  PMV_GUI.cpp  PMV_GUI.h  PMV_Info.cpp  PMV_Info.h  PMV_MOOSApp.cpp  PMV_MOOSApp.h  PMV_Viewer.cpp  PMV_Viewer.h  main.cpp
(+1992 files in other folders)
